# vehicle_infrastructure_cooperation

./: CMakeLists.txt  test_true_boxing.cpp
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/cooperative/: data_info.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/cooperative/label_world/: 015372.json  015404.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/infrastructure-side/: data_info.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/infrastructure-side/calib/camera_intrinsic/: 000010.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/infrastructure-side/calib/virtuallidar_to_camera/: 000009.json  000010.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/infrastructure-side/label/camera/: 000009.json  000010.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/infrastructure-side/label/virtuallidar/: 000009.json  000010.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/infrastructure-side/velodyne/bin_file/: meta.csv
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/vehicle-side/: data_info.json
cooperative-vehicle-infrastructure-example_12649705822621696/cooperative-vehicle-infrastructure-example/vehicle-side/calib/camera_intrinsic/: 015344.json
open3d_test/: CMakeLists.txt  test.cpp
opencv_test/: CMakeLists.txt  test_opencv.cpp
(+1 files in other folders)
